# c_rust_template

./: .gitignore  CMakePresets.json  CmakeLists.txt  README.md  rust_c.code-workspace
lib/rust_hello_world/: CMakeLists.txt  Cargo.toml
lib/rust_hello_world/src/: lib.rs  rust_hello_world_api.h
src/: main.c
